Ban vulnerable log4j versions (#270)
* Ban log4j and bump parent pom

* Revert plugin pom update

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,29 @@
           </execution>
         </executions>
       </plugin>
+      <!-- CVE-2021-44228- we can remove once parent pom is updated to 4.32 -->
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>display-info</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>display-info</goal>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <bannedDependencies>
+                  <excludes>
+                    <exclude>org.apache.logging.log4j:*:(,2.17.0]</exclude>
+                  </excludes>
+                </bannedDependencies>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
